# natural-features

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: docs.yml  tests.yml
.mote/: FORMAT.json
.mote/ops/: 20260707T011409.463156Z-p63807-c0000-r063e-h815138.json  20260707T011409.482859Z-p63807-c0001-r8206-hf6f363.json  20260707T011409.495823Z-p63807-c0002-rc66a-h72c03e.json  20260707T011418.813882Z-p63822-c0000-r1cd4-h0d42ee.json  20260707T011418.825952Z-p63822-c0001-r1e75-h394941.json  20260707T011418.836681Z-p63822-c0002-r8fa9-hc024e9.json  20260707T011418.846559Z-p63822-c0003-r5595-h728cf7.json  20260707T011801.565074Z-p65083-c0000-r5718-h4eef37.json  20260707T011839.392628Z-p65573-c0000-r58a8-h1b47a4.json  20260707T011839.409099Z-p65573-c0001-r7a5e-h2032d3.json  20260707T011839.422226Z-p65573-c0002-rf589-h6ee2fd.json  20260707T011839.432027Z-p65573-c0003-rb701-h50baed.json  (+244 more)
docs/: .gitignore  Makefile  README.md  _quarto.yml  _quartodoc.yml  _variables.scss  acoustic_phonetics_quickstart.md  aligner_policy.md  alignment_benchmarking.md  api_fmri_query_reference.md  asr_alignment_contracts.md  audio_batch_quickstart.md  catalog_data.py  fmri_querying.md  index.qmd  mfa_runtime_setup.md  multiscale_language_quickstart.md  onboarding.md  public_api_policy.md  release_process.md  speech_align_cli.md  styles.css  testing_strategy.md
docs/concepts/: index.qmd  (+11 more)
examples/: end_to_end_movie_pipeline.py
scripts/: build_snl_alignment_manifest.py  check_alignment_benchmark_gate.py  fetch_tier_b_stimuli.py  generate_golden_references.py  generate_tier_a_stimuli.py  import_snl_dataset.py  prepare_tier_b_clips.py  release_check.py  setup_mfa_conda.sh  validate_tier_a_stimuli.py
tools/: docs_lint.py
(+225 files in other folders)
